# nexum

./: .gitignore  .mcp.json  CHANGELOG.md  HANDOFF-hook-investigation.md  LICENSE  README.md  RELEASING.md  SPEC.md  mkdocs.yml  nexum-review.md  opencode.json
.claude-plugin/: marketplace.json  plugin.json
agents/: nexum-impl-haiku.md  nexum-impl-opus.md  nexum-impl-sonnet.md  nexum-reviewer.md
commands/: nexum-audit.md  nexum-implement.md  nexum-plan.md  nexum-statusline.md  nx-build.md  nx-load.md  nx-plan.md  nx-report.md  nx-save.md
docs/: commands.md  configuration.md  contributing.md  how-it-works.md  index.html  index.md  install.md  status-line.md  tui.md
hooks/: hooks.json
scripts/: audit.py  audit_nudge.py  context_watch.py  cost_report.py  dedup.py  dispatch.py  guardrail.py  handoff.py  harness.py  mcp_server.py  plan_preview.py  precompact.py  predup.py  report.py  resume_nudge.py  scan_guard.py  session_reset.py  statusline.py  store.py  subagent_usage.py  truncate.py  worktree.py
tests/: test_audit.py  test_audit_nudge.py  test_context_watch.py  test_cost_report.py  test_dedup.py  test_determinism.py  test_dispatch.py  test_gaps.py  test_guardrail.py  test_handoff.py  test_harness.py  test_mcp_server.py  test_meta_imports.py  test_metering.py  test_plan_preview.py  test_predup.py  test_report_budget.py  test_resume_nudge.py  test_savings.py  test_scan_guard.py  test_statusline.py  test_store.py  (+2 more)
tui/: Cargo.toml  README.md
tui/site/: gen.py
tui/src/: agent.rs  app.rs  main.rs  pty.rs  store.rs  ui.rs
tui/tests/fixtures/: fake_repl.sh
(+24 files in other folders)
