[package]
name = "nexum-tui"
version = "0.1.0"
edition = "2021"
description = "Companion TUI for nexum: a repo-scoped global view of agents across harnesses."

[[bin]]
name = "nexum-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# embedded terminal: run each agent in a PTY and render it inside the TUI
portable-pty = "0.8"
vt100 = "0.15"
tui-term = "0.2"
# multiline rich task editor for the new-agent form
tui-textarea = "0.7"

[profile.release]
opt-level = 2
